2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ConstraintCollection.cs : Add() should throw ArgumentException when
	  the argument constraint fails validation.
	  DataTable.cs : set_PrimaryKey should throw ArgumentException when
	  the argument contains constraints which fail validation.

2005-01-19  Sureshkumar T  <tsureshkumar@novell.com>

	* DataRelationCollection.cs: 

	Method Remove : Donot throw exception if DataRelation argument is
	null in DataRelationCollection.Remove method.

	Method RemoveAt : Exception should be IndexOutOfRangeException if
	row index is not in list range.

	Fixes nunit failures DataRelationCollection.Remove and
	DataRelationCollection.RemoveAt.

2005-01-19  Sureshkumar T  <tsureshkumar@novell.com>	

	* ConstraintCollection.cs: Donot throw exception if constraints
	are null in AddRange method. Check for null before using the
	argument.

	fixes bug #69381.

2004-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDataInferenceLoader.cs,
	  XmlDataReader.cs : Check if the XmlReader (node) represents DataSet
	  or a table, reusing code block in XmlDataInferenceLoader.
	  This fixes bug #60118.

2004-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDiffLoader.cs : Ankit Jain <radical@imt.ac.in> has a conflicting
	  patches and some good catches. Some attributes should be skipped,
	  and loaded value must be typed.

2004-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConstants.cs,
	  XmlDataInferenceLoader.cs, 
	  XmlDataReader.cs : use common const for http://www.w3.org/2000/xmlns/.
	* XmlDiffLoader.cs : It was not handling attributes. Fixed bug #70961.

2005-01-18  Sureshkumar T  <tsureshkumar@novell.com>

	Fix for bug #66838. This patch is submitted by "Ankit Jain"
	<radical@corewars.org> and refactored.

	* DataRow.cs: Allows to set a parent row even if the row is in
	detached state.

	* DataRelation.cs: method "UpdateConstraints" is added to check
	and create missing keys when adding a relation. This is refactored